fix star alignment

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -155,7 +155,7 @@ ul{
       content: '⭐️';
       display: inline-block;
       margin-right: 5px;
-      vertical-align: text-top;
+      // vertical-align: text-top;
     }
   }
   &.ActorActress{
@@ -164,7 +164,7 @@ ul{
       content: '⭐️';
       display: inline-block;
       margin-right: 5px;
-      vertical-align: text-top;
+      // vertical-align: text-top;
     }
   }
   &.ActorActor{
@@ -173,7 +173,7 @@ ul{
       content: '⭐️';
       display: inline-block;
       margin-right: 5px;
-      vertical-align: text-top;
+      // vertical-align: text-top;
     }
   }
   &.ActressActress{
@@ -182,7 +182,7 @@ ul{
       content: '⭐️';
       display: inline-block;
       margin-right: 5px;
-      vertical-align: text-top;
+      // vertical-align: text-top;
     }
   }
 }
